Initial check-in to bring the struts-faces integration library up to date with the beta release of JavaServer Faces 1.0.  So far, interoperation with the Validation framework operates correctly, but a little more work is needed on working with Tiles.
git-svn-id: https://svn.apache.org/repos/asf/struts/trunk@51276 13f79535-47bb-0310-9956-ffa450edef68